햄버거 버튼 추가 기능은 다음 브랜치에서 이어서 작업

--- a/client/src/components/style/SideMenuModule.css
+++ b/client/src/components/style/SideMenuModule.css
@@ -1,27 +1,8 @@
 
-.checkLabel {
-  position: relative;
-  display: block;
-  width: 60px;
-  height: 40px;
-  cursor: pointer;
-  /* z-index 추가 */
-  z-index: 2;
-}
-
-.sideMenu {
-  position: fixed;
-  width: 300px;
-  height: 100%;
-  background-color: tomato;
-  left: -300px;
-  transition: all 300ms;
-  z-index: 1;
-  top: 0px;
-  padding: 60px 20px 20px 20px;
-  box-sizing: border-box;
-}
-
-.check_box:checked + label + #side_menu {
-  left: 0;
+.hamburgerButton{
+  width: 50px;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
 }
