--- a/client/src/components/style/custombtn.css
+++ b/client/src/components/style/custombtn.css
@@ -5,8 +5,11 @@
   width: 80px;
   height: 80px;
   background-color: #ffffff;
-  border-radius: 50%;
   cursor: pointer;
+  margin-left: 25px;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  border-radius: 50%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
