--- a/client/src/components/style/custombtn.css
+++ b/client/src/components/style/custombtn.css
@@ -1,3 +1,9 @@
+.btnContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
 .button {
   display: flex;
   align-items: center;
@@ -6,9 +12,6 @@
   height: 80px;
   background-color: #ffffff;
   cursor: pointer;
-  margin-left: 25px;
-  margin-bottom: 25px;
-  margin-top: 25px;
   border-radius: 50%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
