--- a/client/src/components/style/mainbtn.css
+++ b/client/src/components/style/mainbtn.css
@@ -1,3 +1,10 @@
+.mainBtnContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items:flex-start;
+}
+
 .main-button {
   width: 50px;
   height: 50px;
@@ -5,9 +12,6 @@
   border: none;
   background-color: #ffffff;
   cursor: pointer;
-  margin-left: 25px;
-  margin-bottom: 25px;
-  margin-top: 25px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
