--- a/client/src/components/style/custombtn.css
+++ b/client/src/components/style/custombtn.css
@@ -1,3 +1,17 @@
+.custompage-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
 .button {
   display: flex;
   align-items: center;
