--- a/client/src/components/style/custombtn.css
+++ b/client/src/components/style/custombtn.css
@@ -10,6 +10,7 @@
   justify-content: center;
   gap: 10px;
   flex-wrap: wrap;
+  margin-top: 30px;
 }
 
 .button {
@@ -22,6 +23,7 @@
   border-radius: 50%;
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
 }
 
 .button img {
@@ -31,5 +33,5 @@
 
 .button.active {
   background-color: #0C0FAC;
-  border: 6px solid #FFEB93;
+  border: 4px solid #FFEB93;
 }
