--- a/client/src/components/style/editpage.css
+++ b/client/src/components/style/editpage.css
@@ -10,6 +10,7 @@
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   margin-right: 10px;
+  margin-top: 20px;
 }
 
 /* 활성화된 버튼 남색으로 변경 */
