--- a/client/src/components/style/editpage.css
+++ b/client/src/components/style/editpage.css
@@ -9,7 +9,7 @@
   border-radius: 50%;
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  margin-right: 10px;
+  margin-right: 35px;
   margin-top: 20px;
 }
 
@@ -35,17 +35,20 @@
 /* <p> 태그 중앙 정렬 */
 .center-align {
   text-align: center;
+  margin-top: 80px;
 }
 
 /* 편집 컨테이너 */
 .edit_container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
   width: 390px;
-  height: 500px;
+  height: 450px;
   margin: 0 auto;
 }
+
 
 /* 버튼 컨테이너 가로 정렬 */
 .edit_container .edit_btn_container {
